misc: added scripts for live debug

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,7 @@ out/
 ### VS Code ###
 .vscode/**
 !.vscode/launch.json
+!.vscode/settings.json
 
 ### Durable Prom store
 infrastructure/prometheus/durable
