Fix codespaces + ITs + E2E tests (#228)
This PR includes fixes for the following issues:

Codespaces would no longer be functional when starting up due to No space on device errors when booting. Fixed by using lighter JDK 21 Trixie image instead of Universal image (which included dependencies for multiple languages / stacks we're not using here). This also fixes a longstanding issue we've had in codespaces of how to automatically configure JDK 21, the image used comes with it automatically configured. Required explicit installation of Gradle. Also set moby to false in docker-in-docker feature because of the problem described in this issue Build: Unable to compile latest code in Codespaces evcc-io/evcc#24265
Fixed run configuration in codespaces and attempted to give more explicit naming
make build command would fail due to no longer finding openjdk:21-jdk image, since it is deprecated: see https://hub.docker.com/_/openjdk. Fixed by using alternative amazoncorretto:21-alpine-jdk image instead
Fix test containers: running ./gradlew testIT would fail due to the issue described in [Bug]: Docker 29.0.0 could not find a valid Docker environment testcontainers/testcontainers-java#11212. Fixed by using newest version of test containers (and updated artifact name for org.testcontainers:testcontainers-mongodb). Also fixed 1 failing IT due to put method being used instead of patch as controller describes. Now all ITs pass
Fixed E2E tests: similarly, replace usage of put with patch, as corresponding endpoint describes. Running ./gradlew testE2E should have all E2E tests pass on codespaces and local (requires running service instance)
Updated readme examples to reference new endpoints for consistency + a few more details like mongo admin connection credentials for visibility

--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ ext {
 dependencies {
 	def cucumberVersion = "7.20.1"
 	def junitVersion = "5.11.4"
-	def testcontainersVersion = "1.20.4"
+	def testcontainersVersion = "2.0.3"
 
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -45,7 +45,7 @@ dependencies {
 
 	// Integration tests - test containers dependencies
     testImplementation "org.testcontainers:testcontainers:$testcontainersVersion"
-    testImplementation "org.testcontainers:mongodb:$testcontainersVersion"
+    testImplementation "org.testcontainers:testcontainers-mongodb:$testcontainersVersion"
 
 	//	E2E tests
 	runtimeOnly "org.junit.vintage:junit-vintage-engine:$junitVersion"
