Define response classes, separate request

--- a/build.gradle
+++ b/build.gradle
@@ -84,7 +84,8 @@ jacocoTestReport {
 	afterEvaluate {
 		classDirectories.setFrom(files(classDirectories.files.collect {
 			fileTree(dir: it, exclude: [
-				'**/dto/**',
+				'**/request/**',
+				'**/response/**',
 				'**/config/**',
 				'**/*Application.class'
 			])
