--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,6 +13,9 @@
   },
   "customizations": {
     "vscode": {
+      "settings": {
+        "java.jdt.ls.java.home": "/usr/lib/jvm/msopenjdk-current"
+      },
       "extensions": [
         "vscjava.vscode-java-pack",
         "ms-azuretools.vscode-docker",
