Add exception package to exclusion in jacoco

--- a/build.gradle
+++ b/build.gradle
@@ -85,6 +85,7 @@ jacocoTestReport {
 		classDirectories.setFrom(files(classDirectories.files.collect {
 			fileTree(dir: it, exclude: [
 				'**/config/**',
+				'**/exception/**',
 				'**/model/**',
 				'**/repository/**',
 				'**/request/**',
