--- a/infrastructure/grafana/dashboards/app/prod-eng-app.json
+++ b/infrastructure/grafana/dashboards/app/prod-eng-app.json
@@ -101,7 +101,7 @@
             "uid": "PBFA97CFB590B2093"
           },
           "exemplar": true,
-          "expr": "rate(hello_greeting_count_total[5m])",
+          "expr": "rate(prod_eng_greeting_count_total[5m])",
           "interval": "",
           "legendFormat": "",
           "refId": "A"
@@ -186,7 +186,7 @@
             "uid": "PBFA97CFB590B2093"
           },
           "exemplar": true,
-          "expr": "hello_greeting_count_total",
+          "expr": "prod_eng_greeting_count_total",
           "interval": "",
           "legendFormat": "",
           "refId": "A"
@@ -271,7 +271,7 @@
             "uid": "PBFA97CFB590B2093"
           },
           "exemplar": true,
-          "expr": "hello_greeting_time_seconds_max",
+          "expr": "prod_eng_greeting_time_seconds_max",
           "interval": "",
           "legendFormat": "",
           "refId": "A"
@@ -356,13 +356,13 @@
             "uid": "PBFA97CFB590B2093"
           },
           "exemplar": true,
-          "expr": "rate(hello_info_count_total[5m])",
+          "expr": "rate(prod_eng_info_count_total[5m])",
           "interval": "",
           "legendFormat": "",
           "refId": "A"
         }
       ],
-      "title": "hello rated [5m]",
+      "title": "prod-eng rated [5m]",
       "type": "timeseries"
     },
     {
@@ -441,13 +441,13 @@
             "uid": "PBFA97CFB590B2093"
           },
           "exemplar": true,
-          "expr": "hello_info_count_total",
+          "expr": "prod_eng_info_count_total",
           "interval": "",
           "legendFormat": "",
           "refId": "A"
         }
       ],
-      "title": "hello counter",
+      "title": "prod-eng counter",
       "type": "timeseries"
     },
     {
@@ -526,13 +526,13 @@
             "uid": "PBFA97CFB590B2093"
           },
           "exemplar": true,
-          "expr": "hello_info_time_seconds_max",
+          "expr": "prod_eng_info_time_seconds_max",
           "interval": "",
           "legendFormat": "",
           "refId": "A"
         }
       ],
-      "title": "get hello time",
+      "title": "get prod-eng time",
       "type": "timeseries"
     },
     {
@@ -804,7 +804,7 @@
   },
   "timepicker": {},
   "timezone": "",
-  "title": "Hello App Monitoring",
+  "title": "Prod Eng App Monitoring",
   "uid": "DetUS0L7k",
   "version": 1,
   "weekStart": ""
