--- a/infrastructure/kubernetes/prod-eng-service.yaml
+++ b/infrastructure/kubernetes/prod-eng-service.yaml
@@ -2,17 +2,17 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    hello-service: hello
-  name: hello
+    prod-eng-service: prod-eng-service
+  name: prod-eng-service
 spec:
   replicas: 1
   selector:
     matchLabels:
-      hello-service: hello
+      prod-eng-service: prod-eng-service
   template:
     metadata:
       labels:
-        hello-service: hello
+        prod-eng-service: prod-eng-service
     spec:
       containers:
         - env:
@@ -20,8 +20,8 @@ spec:
               value: local
             - name: MONGODB_CONECTION_URL
               value: mongodb://root:example@mongo:27017/
-          image: robertpoziumschi/hello-img-pipeline:v1.2.0
-          name: hello
+          image: robertpoziumschi/prod-eng-img-pipeline:v1.2.0
+          name: prod-eng-service
           ports:
             - containerPort: 8080
       restartPolicy: Always
@@ -30,8 +30,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    hello-service: hello
-  name: hello
+    prod-eng-service: prod-eng-service
+  name: prod-eng-service
 spec:
   type: LoadBalancer
   ports:
@@ -39,4 +39,4 @@ spec:
       port: 8080
       targetPort: 8080
   selector:
-    hello-service: hello
+    prod-eng-service: prod-eng-service
