--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port=8080
-spring.application.name=hello-service
+spring.application.name=prod-eng-service
 mongodb.connection.url=${MONGODB_CONECTION_URL:mongodb://root:example@localhost:27017}
