--- a/infrastructure/kubernetes/prod-eng-service.yaml
+++ b/infrastructure/kubernetes/prod-eng-service.yaml
@@ -2,17 +2,17 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    prod-eng-service: prod-eng-service
-  name: prod-eng-service
+    prod-eng-service: prod-eng
+  name: prod-eng
 spec:
   replicas: 1
   selector:
     matchLabels:
-      prod-eng-service: prod-eng-service
+      prod-eng-service: prod-eng
   template:
     metadata:
       labels:
-        prod-eng-service: prod-eng-service
+        prod-eng-service: prod-eng
     spec:
       containers:
         - env:
@@ -21,7 +21,7 @@ spec:
             - name: MONGODB_CONECTION_URL
               value: mongodb://root:example@mongo:27017/
           image: robertpoziumschi/hello-img-pipeline:v1.2.0
-          name: prod-eng-service
+          name: prod-eng
           ports:
             - containerPort: 8080
       restartPolicy: Always
@@ -30,8 +30,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    prod-eng-service: prod-eng-service
-  name: prod-eng-service
+    prod-eng-service: prod-eng
+  name: prod-eng
 spec:
   type: LoadBalancer
   ports:
@@ -39,4 +39,4 @@ spec:
       port: 8080
       targetPort: 8080
   selector:
-    prod-eng-service: prod-eng-service
+    prod-eng-service: prod-eng
