Add Cucumber report to /build instead of /target to be consistent with rest of project

--- a/build.gradle
+++ b/build.gradle
@@ -111,7 +111,7 @@ task testE2E() {
 			classpath = configurations.cucumberRuntime + sourceSets.main.output + sourceSets.test.output
 			args = [
 					'--plugin', 'pretty',
-					'--plugin', 'html:target/cucumber-report.html',
+					'--plugin', 'html:build/reports/cucumber/cucumber-report.html',
 					'--glue', 'ro.unibuc.prodeng.e2e',
 					'src/test/resources']
 		}
