Add exception to coverage exclusion: Exception handler class does not show as tested in jacoco even though it is covered by controller test

--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,7 @@ jacocoTestReport {
 		classDirectories.setFrom(files(classDirectories.files.collect {
 			fileTree(dir: it, exclude: [
 				'**/config/**',
+				'**/exception/**',
 				'**/model/**',
 				'**/repository/**',
 				'**/request/**',
